[tool.poetry]
name = "opszero-rustypy"
version = "1.0.0"
description = ""
authors = ["Abhi Yerra <abhi@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
maturin = "^0.14.12"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "opszero-rustypy"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
